--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
 contourpy==1.0.7
 cycler==0.11.0
 fonttools==4.38.0
+imageio==2.25.0
+kaleido==0.2.1
 kiwisolver==1.4.4
 matplotlib==3.6.3
+networkx==3.0
 nibabel==5.0.0
 numpy==1.24.1
 packaging==23.0
 Pillow==9.4.0
+plotly==5.13.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
+PyWavelets==1.4.1
+scikit-image==0.19.3
+scipy==1.10.0
 SimpleITK==2.2.1
 six==1.16.0
+tenacity==8.1.0
+tifffile==2023.2.2
