--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+click==8.1.3
+colorama==0.4.6
+commonmark==0.9.1
 contourpy==1.0.7
 cycler==0.11.0
+Deprecated==1.2.13
 fonttools==4.38.0
+humanize==4.6.0
 imageio==2.25.0
 kaleido==0.2.1
 kiwisolver==1.4.4
@@ -11,14 +16,21 @@ numpy==1.24.1
 packaging==23.0
 Pillow==9.4.0
 plotly==5.13.0
+Pygments==2.14.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 PyWavelets==1.4.1
+rich==12.6.0
 scikit-image==0.19.3
 scipy==1.10.0
+shellingham==1.5.0.post1
 SimpleITK==2.2.1
 six==1.16.0
 tenacity==8.1.0
 tifffile==2023.2.2
 torch==1.13.1
+torchio==0.18.90
+tqdm==4.65.0
+typer==0.7.0
 typing_extensions==4.5.0
+wrapt==1.15.0
